# arhelk-lexer

./: .gitignore  .travis.yml  README.md  arhelk-lexer.cabal  arhelk.cabal  stack.yaml
app/: Language.hs  Main.hs
app/Language/: Armenian.hs  Esperanto.hs  Russian.hs
src/: Lib.hs
src/Arhelk/: Lexer.hs
src/Arhelk/Lexer/: Grammar.hs  Language.hs  Token.hs
test/: Spec.hs
test-input/Armenian/: the-bible-genesis.txt
test-input/Esperanto/: the-bible-genesis.txt
test-input/Russian/: the-bible-genesis.txt
test/Test/Arhelk/Lexer/: Grammar.hs  Token.hs
