name:                arhelk-lexer
version:             0.2.0.0
synopsis:            General lexer for arhelk project
description:         Please see README.md
homepage:            https://github.com/Teaspot-Studio/arhelk-lexer
license:             BSD3
license-file:        LICENSE
author:              Oganyan Levon <lemarwin42@gmail.com>, Anton Gushcha <ncrashed@gmail.com>
maintainer:          lemarwin42@gmail.com
copyright:           2015 © Teaspot Studio
category:            Language
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Arhelk.Lexer
                       Arhelk.Lexer.Token
                       Arhelk.Lexer.Grammar
                       Arhelk.Lexer.Language

  build-depends:       base >= 4.7 && < 5
                     , text
                     , text-show
                     , parsec

  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                       FlexibleContexts
                       RecordWildCards
                       ScopedTypeVariables
                       TypeFamilies
                       
executable arhelk-lexer
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , arhelk-lexer
                     , parsec
                     , text
                     , text-show
                     , optparse-simple

  default-language:    Haskell2010
  other-modules:       Language
                       Language.Armenian
                       Language.Esperanto
                       Language.Russian
                       
  default-extensions:  OverloadedStrings
                       RecordWildCards

test-suite arhelk-lexer-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , arhelk-lexer
                     , test-framework
                     , test-framework-quickcheck2
                     , QuickCheck
                     , quickcheck-instances
                     , text
                     , parsec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  other-modules:       Test.Arhelk.Lexer.Grammar
                       Test.Arhelk.Lexer.Token
  default-extensions:  OverloadedStrings
  
source-repository head
  type:     git
  location: https://github.com/Teaspot-Studio/arhelk-lexer.git
